# Projet_Election_2021_C

./: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  gestion_utilisateur.glade  gestion_utilisateur.gladep.bak  projetc.glade.bak  projetc.gladep.bak
autom4te.cache/: output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  gestion_obs  gestion_observateur  gestion_utilisateur  interface.c  interface.c.bak  interface.h  main.c  observateur.c  observateur.h  observateur.txt  utilisateur.txt  yassineutilisateur.c  yassineutilisateur.h
src/.deps/: callbacks.Po  observateur.Po  yassineutilisateur.Po
